--- a/PTI/SPCK/GUI/AdminTool - note1.ui
+++ b/PTI/SPCK/GUI/AdminTool - note1.ui
@@ -28,6 +28,9 @@
       <pointsize>10</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(0, 0, 0);</string>
+    </property>
     <property name="text">
      <string>Remove
 this note</string>
@@ -46,6 +49,9 @@ this note</string>
      <font>
       <pointsize>10</pointsize>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(0, 0, 0);</string>
     </property>
     <property name="text">
      <string>View/Edit
@@ -66,6 +72,9 @@ this note detail</string>
       <pointsize>10</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(0, 0, 0);</string>
+    </property>
     <property name="text">
      <string>Back</string>
     </property>
@@ -83,6 +92,9 @@ this note detail</string>
      <font>
       <pointsize>15</pointsize>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(0, 0, 0);</string>
     </property>
     <property name="text">
      <string>Admin Tool
