--- a/PTI/SPCK/GUI/editNote.ui
+++ b/PTI/SPCK/GUI/editNote.ui
@@ -14,7 +14,7 @@
    <string>Note for WOW! - Edit Page</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(255, 243, 207);</string>
+   <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLineEdit" name="le_name">
@@ -27,7 +27,7 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255);</string>
+     <string notr="true"/>
     </property>
     <property name="placeholderText">
      <string>You can enter the Notes Page name here!</string>
@@ -46,6 +46,9 @@
      <font>
       <pointsize>10</pointsize>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>Name:</string>
@@ -89,6 +92,9 @@
       <pointsize>10</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="text">
      <string>Save changes</string>
     </property>
@@ -107,6 +113,9 @@
       <pointsize>10</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="text">
      <string>Title:</string>
     </property>
@@ -121,7 +130,7 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255);</string>
+     <string notr="true"/>
     </property>
     <property name="placeholderText">
      <string>You can enter the Notes Page title here!</string>
