--- a/PTI/SPCK/GUI/font.ui
+++ b/PTI/SPCK/GUI/font.ui
@@ -63,7 +63,7 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255);</string>
+     <string notr="true"/>
     </property>
     <property name="currentText">
      <string>Tahoma</string>
@@ -84,7 +84,7 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255);</string>
+     <string notr="true"/>
     </property>
     <property name="editable">
      <bool>true</bool>
